ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated5_ES6/input.ts.stderr
error: Unexpected eof
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated5_ES6/input.ts:2:8
  |
2 | `\\\\\`
  |        ^

